# lv-bgt-downloader

./: .gitignore  README.md  appConfig.ini  bounds.geojson  main.py  pyproject.toml  requirements.txt  setup.bat  setup.py
app/: __init__.py  bgt.py
app/geo/: __init__.py  transformer.py
app/models/: __init__.py  gml.py  parser.py  stufgeo.py
app/pdok/: api.py
app/stufgeo/: __init__.py  gml.py  parser.py  stufgeo_cad.py  stufgeo_gml.py  stufgeo_xml.py
demo/: bounds.geojson  main.py
lv_bgt_downloader/: __init__.py  lv_bgt.py  pdok.py
lv_bgt_downloader/stufgeo/: __init__.py  stufgeo_cad.py  stufgeo_gml.py  stufgeo_xml.py  xml_utils.py
lv_bgt_downloader/utils/: __init__.py  config.py  logger.py
src/lv_bgt/: __init__.py  __main__.py  api.py  bgt.py  main.py
src/lv_bgt/stufgeo/: __init__.py  cad.py  stufgeo.py  xml.py
